# C-compiler

./: .gitignore  README.md  ast_c.ml  ast_mips.ml  c_to_mips.ml  compiler.ml  dune  dune-project  lexer.mll  out.s  parser.mly  ptigcc.ml  reader.ml
Tests/: test.c  test.cs  test_arith.c  test_binop.c  test_bool.c  test_fonctions.c  test_for.c  test_pointeur.c  test_variables.c
