(ocamllex
 (modules lexer))
(menhir
 (modules parser))
(library
  (name eval)
  (modules lexer parser ast runtime eval)
  (libraries unix)
)
(executable
 (name ptigcc)
 (promote (until-clean))
 (modules ptigcc)
 (libraries unix eval)
 (flags ())
)
(test
 (name test)
 (modules test)
 (libraries unix eval)
 (flags ()))
