(ocamllex
 (modules lexer))
(menhir
 (modules parser))
(library
  (name reader)
  (modules lexer parser ast_c ast_bytecode compiler reader)
  (libraries unix)
)
(executable
 (name ptigcc)
 (promote (until-clean))
 (modules ptigcc)
 (libraries unix reader)
 (flags ())
)
(test
 (name test)
 (modules test)
 (libraries unix reader)
 (flags ()))
